[metadata]
name = djangocms-aldryn-forms
author = Divio AG
author_email = info@divio.ch
version = attr: aldryn_forms.__version__
description = Create forms and embed them on CMS pages.
url = https://github.com/CZ-NIC/djangocms-aldryn-forms
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Framework :: Django
    Framework :: Django :: 5.0
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[options]
python_requires = >=3.10
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django-cms~=4.1
    django-emailit~=0.2
    django-filer~=3.3
    django-filter~=25.1
    django-formtools~=2.5
    django-import-export~=4.3
    django-tablib~=3.2
    djangocms-alias~=2.0
    djangocms-attributes-field~=4.0
    djangocms-text~=0.8
    djangocms-link~=5.0
    Markdown~=3.8
    easy-thumbnails[svg]~=2.10
    requests~=2.32
    djangorestframework~=3.16
    jq~=1.8
    jsonschema~=4.23

[options.extras_require]
captcha = django-simple-captcha~=0.6

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 120
exclude =
    *.egg-info,
    .eggs,
    .git,
    .settings,
    .tox,
    build,
    data,
    dist,
    docs,
    *migrations*,
    requirements,
    tmp

[isort]
line_length = 120
skip = manage.py, *migrations*, .tox, .eggs, data
include_trailing_comma = true
multi_line_output = 5
not_skip = __init__.py
lines_after_imports = 2
default_section = THIRDPARTY
sections = FUTURE, STDLIB, DJANGO, CMS, THIRDPARTY, FIRSTPARTY, LIB, LOCALFOLDER
known_first_party = aldryn_forms
known_cms = cms, menus
known_django = django

[compile_catalog]
domain = django djangojs
directory = aldryn_forms/locale
